[package]
name = "brooklyn_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
log = "0.4.17"
num_cpus = "1.15.0"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
